# detector

./: CMakeLists.txt  README  README.md  cmake.conf
docs/: Кривые обнаружения.xlsx  Оптимальный обнаружитель.docx  Патент.doc  Сигнал.xlsx
include/: .core.h.swp  core.h  detection_table.h  get_args.h  noise_generator.h
src/: CMakeLists.txt  core.cpp  detection_table.cpp  main.cpp  noise_generator.cpp
